@@ -16,9 +16,10 @@
  */
 package org.keycloak.authorization.admin.representation;
 
+import org.keycloak.authorization.AdminPermissionsSchema;
 import org.keycloak.authorization.AuthorizationProvider;
 import org.keycloak.authorization.Decision;
-import org.keycloak.authorization.admin.PolicyEvaluationService;
+import org.keycloak.authorization.admin.PolicyEvaluationService.EvaluationDecisionCollector;
 import org.keycloak.authorization.common.KeycloakIdentity;
 import org.keycloak.authorization.model.PermissionTicket;
 import org.keycloak.authorization.model.Policy;
@@ -31,6 +32,7 @@ import org.keycloak.models.RealmModel;
 import org.keycloak.models.UserModel;
 import org.keycloak.representations.AccessToken;
 import org.keycloak.representations.idm.authorization.DecisionEffect;
+import org.keycloak.representations.idm.authorization.PolicyEvaluationRequest;
 import org.keycloak.representations.idm.authorization.PolicyEvaluationResponse;
 import org.keycloak.representations.idm.authorization.PolicyEvaluationResponse.PolicyResultRepresentation;
 import org.keycloak.representations.idm.authorization.PolicyRepresentation;
@@ -38,11 +40,11 @@ import org.keycloak.representations.idm.authorization.ResourceRepresentation;
 import org.keycloak.representations.idm.authorization.ScopeRepresentation;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Comparator;
 import java.util.EnumMap;
 import java.util.HashMap;
+import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -55,7 +57,11 @@ import java.util.stream.Stream;
  * @version $Revision: 1 $
  */
 public class PolicyEvaluationResponseBuilder {
-    public static PolicyEvaluationResponse build(PolicyEvaluationService.EvaluationDecisionCollector decision, ResourceServer resourceServer, AuthorizationProvider authorization, KeycloakIdentity identity) {
+    public static PolicyEvaluationResponse build(EvaluationDecisionCollector decision, ResourceServer resourceServer, AuthorizationProvider authorization, KeycloakIdentity identity, PolicyEvaluationRequest request) {
+        if (AdminPermissionsSchema.SCHEMA.isAdminPermissionClient(authorization.getRealm(), resourceServer.getId())) {
+            return FGAPPolicyEvaluationResponseBuilder.build(decision, resourceServer, authorization, request);
+        }
+
         PolicyEvaluationResponse response = new PolicyEvaluationResponse();
         List<PolicyEvaluationResponse.EvaluationResultRepresentation> resultsRep = new ArrayList<>();
         AccessToken accessToken = identity.getAccessToken();
@@ -115,7 +121,7 @@ public class PolicyEvaluationResponseBuilder {
                 return representation;
             }).collect(Collectors.toList()));
 
-            List<PolicyEvaluationResponse.PolicyResultRepresentation> policies = new ArrayList<>();
+            Set<PolicyEvaluationResponse.PolicyResultRepresentation> policies = new HashSet<>();
 
             for (Result.PolicyResult policy : result.getResults()) {
                 PolicyResultRepresentation policyRep = toRepresentation(policy, authorization);
@@ -150,29 +156,23 @@ public class PolicyEvaluationResponseBuilder {
             List<ScopeRepresentation> scopes = result.getScopes();
 
             if (DecisionEffect.PERMIT.equals(result.getStatus())) {
-                result.setAllowedScopes(scopes);
+                result.setAllowedScopes(new HashSet<>(scopes));
             }
 
             if (resource.getId() != null) {
                 if (!scopes.isEmpty()) {
-                    result.getResource().setName(evaluationResultRepresentation.getResource().getName() + " with scopes " + scopes.stream().flatMap((Function<ScopeRepresentation, Stream<?>>) scopeRepresentation -> Arrays.asList(scopeRepresentation.getName()).stream()).collect(Collectors.toList()));
+                    result.getResource().setName(evaluationResultRepresentation.getResource().getName() + " with scopes " + scopes.stream().flatMap((Function<ScopeRepresentation, Stream<?>>) scopeRepresentation -> Stream.of(scopeRepresentation.getName())).toList());
                 } else {
                     result.getResource().setName(evaluationResultRepresentation.getResource().getName());
                 }
             } else {
-                result.getResource().setName("Any Resource with Scopes " + scopes.stream().flatMap((Function<ScopeRepresentation, Stream<?>>) scopeRepresentation -> Arrays.asList(scopeRepresentation.getName()).stream()).collect(Collectors.toList()));
+                result.getResource().setName("Any Resource with Scopes " + scopes.stream().flatMap((Function<ScopeRepresentation, Stream<?>>) scopeRepresentation -> Stream.of(scopeRepresentation.getName())).toList());
             }
 
-            List<PolicyEvaluationResponse.PolicyResultRepresentation> policies = result.getPolicies();
-
-            for (PolicyEvaluationResponse.PolicyResultRepresentation policy : new ArrayList<>(evaluationResultRepresentation.getPolicies())) {
-                if (!policies.contains(policy)) {
-                    policies.add(policy);
-                }
-            }
+            result.getPolicies().addAll(evaluationResultRepresentation.getPolicies());
         });
 
-        response.setResults(groupedResults.values().stream().collect(Collectors.toList()));
+        response.setResults(new ArrayList<>(groupedResults.values()));
 
         return response;
     }
